--- a/README
+++ b/README
@@ -1,33 +1,38 @@
-2017/7/22第一次小组会议
+## 小组成员：  
 
-主题：确定范围与分工
-参会人员：
-Joe：数据统计，擅长github、编程，病理与基因组领域
-池振奋：医学知识整理
-丁磊：图像识别，木板领域
-韩松杉：大数据，机器学习，金融领域
-黄焕伟：生物信息，基因组领域
-李芮智：大数据
-刘超飞：知识图谱
-刘刃：医学知识整理
-聂垚：建筑设备
-聂凌虎：癌症，基因网站与知识库构建
-仝福强：网站建设
-王骞：深度学习，图像处理
-王建峰：网络设计与架构
-袁琦：爬取数据，建数据库
+- **Joe**：数据统计，擅长github、编程，病理与基因组领域
+- **池振奋**：医学知识整理
+- **丁磊**：图像识别，木板领域
+- **韩松杉**：大数据，机器学习，金融领域
+- **黄焕伟**：生物信息，基因组领域
+- **李芮智**：大数据
+- **刘超飞**：知识图谱
+- **刘刃**：医学知识整理
+- **聂垚**：建筑设备
+- **聂凌虎**：癌症，基因网站与知识库构建
+- **仝福强**：网站建设
+- **王骞**：深度学习，图像处理
+- **王建峰**：网络设计与架构
+- **袁琦**：爬取数据，建数据库
 
-讨论结果：
+
+## 项目目的：
+
+初步建立养生知识图谱
+
+
+## 项目范围： 
 
 爬取网站：中华养生网www.cnys.com
 
-内容分工：
-爬虫/解析:袁琦，王骞，李芮智
-知识库构建：刘超飞、王建峰、王骞
-医学营养知识整理：刘刃、池振奋
-展示：王建峰、仝福强、韩松杉
+##  初步分工： 
+- 爬虫/解析:袁琦，王骞，李芮智
+- 知识库构建：刘超飞、王建峰、王骞
+- 医学营养知识整理：刘刃、池振奋
+- 展示：王建峰、仝福强、韩松杉
 
-其它：
-医疗信息组群名片实名
-视频会议每周六上午10点
-github右上请点wacthing，以便成员之间相互看到
+## 其它
+
+- 医疗信息组群名片实名
+- 视频会议每周六上午10点
+- github右上请点wacthing，以便成员之间相互看到
